item検索のSQLをログに出力するようにした

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,7 @@ spring:
     password: postgres
 #    tomcat:
 #      default-auto-commit: false
+logging:
+  file: logs/myapp.log
+  level:
+    org.springframework.web: INFO
