--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 #      enabled: false
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/mercari3
+    url: jdbc:postgresql://localhost:5432/mercari
     username: postgres
     password: postgres
 #    tomcat:
